--- a/less/style.less
+++ b/less/style.less
@@ -1,8 +1,40 @@
 @charset "utf-8";
 
+/* http://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css */
 @import (less) '../css/reset.css';
 
-/* End Reset */
+/*
+==========================================================================
+Fonts
+==========================================================================
+*/
+@font-face {
+	font-family: 'FuturaLTRegular';
+	src: url('../fonts/futuralt-webfont.eot');
+	src: url('../fonts/futuralt-webfont.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/futuralt-webfont.woff') format('woff'),
+	url('../fonts/futuralt-webfont.ttf') format('truetype'),
+	url('../fonts/futuralt-webfont.svg#FuturaLTRegular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'FuturaLTHeavy';
+	src: url('../fonts/futuralt-heavy-webfont.eot');
+	src: url('../fonts/futuralt-heavy-webfont.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/futuralt-heavy-webfont.woff') format('woff'),
+	url('../fonts/futuralt-heavy-webfont.ttf') format('truetype'),
+	url('../fonts/futuralt-heavy-webfont.svg#FuturaLTHeavy') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+
+/*
+==========================================================================
+Scaffolding
+==========================================================================
+*/
 body {
 	background:#463e3e;
 	padding:0;
@@ -12,31 +44,6 @@ body {
 	color:#fff;
 	letter-spacing:-0.25px;
 }
-
-/* -------------------------------------------------------------
-	FONTS
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-@font-face {
-    font-family: 'FuturaLTRegular';
-    src: url('../fonts/futuralt-webfont.eot');
-    src: url('../fonts/futuralt-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/futuralt-webfont.woff') format('woff'),
-         url('../fonts/futuralt-webfont.ttf') format('truetype'),
-         url('../fonts/futuralt-webfont.svg#FuturaLTRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'FuturaLTHeavy';
-    src: url('../fonts/futuralt-heavy-webfont.eot');
-    src: url('../fonts/futuralt-heavy-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/futuralt-heavy-webfont.woff') format('woff'),
-         url('../fonts/futuralt-heavy-webfont.ttf') format('truetype'),
-         url('../fonts/futuralt-heavy-webfont.svg#FuturaLTHeavy') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
 .clearfix:after {
 	content: ".";
 	display: block;
@@ -44,24 +51,33 @@ body {
 	clear: both;
 	visibility: hidden;
 }
-a{text-decoration:none;}
-a:link {color:#fff;}     
-a:visited {color:#fff;}
-a:hover {color:#fff;}  
-a:active {color:#fff;}
+a,
+a:link,
+a:visited,
+a:hover,
+a:active {
+	text-decoration: none;
+	color:#fff;
+}
 
-.clear {clear: both;}
-.center {text-align: center;}
-.left {float: left;}
-.right {float: right;}
-.caps{text-transform:uppercase;}
-.italic{font-style:italic;}
+h1, h2, h3, h4, h5 {
+	font-family: 'FuturaLTHeavy';
+	margin: 0;
+	padding: 0;
+}
+h2 {
+	color: #10bed2;
+	margin: 20px 0 0 0;
+	text-transform: uppercase;
+}
 
-h1, h2, h3, h4, h5{font-family: 'FuturaLTHeavy';}
-h2 {color:#10bed2; margin:20px 0 0 0;}
 
-ul li{list-style-type: none;}
-div.sidebar{
+/*
+==========================================================================
+Sidebar
+==========================================================================
+*/
+.sidebar{
 	width:180px; /* 200 */
 	padding:10px;	
 	position:absolute;
@@ -72,25 +88,18 @@ div.sidebar{
 	letter-spacing:0.1em;
 	background:url(../images/menu.png) repeat-y;
 }
-div.sidebar li,
-div.sidebar h2{
-	text-transform:uppercase;
-}
-div.sidebar li a {
-    font-family: 'FuturaLTRegular';
+.sidebar li a {
+	font-family: 'FuturaLTRegular';
 	color:#fff;
 	display:block;
 	margin:5px 0;
 	background-color:transparent;
-	
-	-moz-transition-duration: .5s, .5s;
-	-webkit-transition-duration: .5s, .5s;
 	transition-duration: .5s, .5s;
 }
-div.sidebar li a:hover{
+.sidebar li a:hover{
 	text-shadow:0px 0px 4px #f5da98;
 }
-.logo{
+.logo {
 	width:181px;
 	height:58px;
 	display:block;
@@ -101,6 +110,7 @@ div.sidebar li a:hover{
 #header{
 	top:0;
 	background-position:0 100%;
+	text-transform:uppercase;
 }
 #footer {
 	bottom:0;
@@ -108,32 +118,41 @@ div.sidebar li a:hover{
 	padding-bottom:25px;
 	background-position:0 0;
 }
-#footer h2{margin:0;}
 .bottom{
 	padding:10px 0 0 0;
 }
-.bottom #toggle {
+#toggle {
 	text-align:right;
-	background-image:url(../images/arrow.png);
-	background-repeat:no-repeat;
-	background-position:100% 0;
+	background: url(../images/arrow.png) no-repeat 100% 0;
 	padding:0 20px 0 0;
 	height:15px;
 	line-height:15px;
 	display:block;
 	font-size:8px;
 	text-transform:uppercase;
-}
-.active {background-position:100% 100% !important;}
-#toggle #menu_off{display:none;}
-.active #menu_off {display:inline !important;}
-#toggle #menu_on{display:inline;}
-.active #menu_on {display:none !important;}
 
-/* -------------------------------------------------------------
-	TOP BAR and FOOTER BAR
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-.copyright{
+	#menu_off{
+		display: none;
+	}
+}
+#toggle.active {
+	background-position: 100% 100%;
+
+	#menu_off {
+		display: inline;
+	}
+	#menu_on {
+		display: none;
+	}
+}
+
+
+/*
+==========================================================================
+Footer
+==========================================================================
+*/
+.copyright {
 	position:fixed;
 	right:5px;
 	text-align:right;
@@ -141,22 +160,26 @@ div.sidebar li a:hover{
 	z-index:999;
 	bottom:5px;
 	opacity:0.9;
-}
-.copyright a, .copyright span{
-	color:#fff;
-	text-transform: uppercase;
-	margin-right:10px;
-	text-decoration:none;
-	font-family:Arial;
-	font-size:10px;
-}
-.copyright span:hover{
-	text-shadow:0px 0px 1px #fff;
+
+	a, span {
+		color:#fff;
+		text-transform: uppercase;
+		margin-right:10px;
+		text-decoration:none;
+		font-family:Arial;
+		font-size:10px;
+
+		&:hover {
+			text-shadow:0px 0px 1px #fff;
+		}
+	}
 }
 
-/* -------------------------------------------------------------
-	FULLSCREEN GALLERY
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+/*
+==========================================================================
+jQuery Supersized
+==========================================================================
+*/
 a.controls{
 	height:15px;
 	line-height:15px;
@@ -176,18 +199,18 @@ a.next{
 #supersized-loader { position:absolute; top:50%; left:50%; z-index:10; width:60px; height:60px; margin:-30px 0 0 -30px; text-indent:-999em; background-color:#463e3e; background:rgba(0,0,0,0.5) url(../images/progress.gif) no-repeat center center; -webkit-border-radius:5px; -moz-border-radius:5px; border-radius:5px;}
 
 #supersized { position:fixed; left:0; top:0; overflow:hidden; z-index:-999; height:100%; width:100%; }
-	#supersized img{ width:auto; height:auto; position:relative; display:none; outline:none; border:none; }
-		#supersized.speed img { -ms-interpolation-mode:nearest-neighbor; image-rendering: -moz-crisp-edges; }	/*Speed*/
-		#supersized.quality img { -ms-interpolation-mode:bicubic; image-rendering: optimizeQuality; }			/*Quality*/
-	
-	#supersized a { z-index:-30; position:absolute; overflow:hidden; top:0; left:0; width:100%; height:100%; background:#111;}
-		#supersized a.prevslide { z-index:-20; }
-		#supersized a.activeslide { z-index:-10; }
-		#supersized a.prevslide img, #supersized a.activeslide img{ display:inline; }
+#supersized img{ width:auto; height:auto; position:relative; display:none; outline:none; border:none; }
+#supersized.speed img { -ms-interpolation-mode:nearest-neighbor; image-rendering: -moz-crisp-edges; }	/*Speed*/
+#supersized.quality img { -ms-interpolation-mode:bicubic; image-rendering: optimizeQuality; }			/*Quality*/
+
+#supersized a { z-index:-30; position:absolute; overflow:hidden; top:0; left:0; width:100%; height:100%; background:#111;}
+#supersized a.prevslide { z-index:-20; }
+#supersized a.activeslide { z-index:-10; }
+#supersized a.prevslide img, #supersized a.activeslide img{ display:inline; }
 
 /*Controls Section*/
-		#slidecounter { color:#888; font:18px "Helvetica Neue", Helvetica, Arial, sans-serif; font-weight:bold; margin-left:15px; }
-		#navigation { margin:15px 0; }
+#slidecounter { color:#888; font:18px "Helvetica Neue", Helvetica, Arial, sans-serif; font-weight:bold; margin-left:15px; }
+#navigation { margin:15px 0; }
 /* Caption */
 #slidecaption{
 	font-size:11px;
