Back to pretty permalinks

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,13 +4,13 @@
 	<div id="menu">
 		<h2>Photography</h2>
 		<ul>
-			<li><a href="/realestate.html">Real Estate</a></li>
-			<li><a href="/travel.html">Travel</a></li>
+			<li><a href="/realestate">Real Estate</a></li>
+			<li><a href="/travel">Travel</a></li>
 		</ul>
 		<h2>Graphic Design</h2>
 		<ul>
-			<li><a href="/print.html">Print</a></li>
-			<li><a href="/web.html">Web</a></li>
+			<li><a href="/print">Print</a></li>
+			<li><a href="/web">Web</a></li>
 		</ul>
 		<h2>Contact</h2>
 		<ul>
