--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,5 +12,5 @@
 </div>
 
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script type="text/javascript">window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
-<script type="text/javascript" src="js/app-dist.js"></script>
+<script type="text/javascript">window.jQuery || document.write('<script src="/js/vendor/jquery.min.js"><\/script>')</script>
+<script type="text/javascript" src="/js/app-dist.js"></script>
