Attempt to fix Jekyll paths (see issue #3)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,16 @@
 <!-- Navigation -->
 <div id="header" class="sidebar">
-	<h1><a class="logo" href="./.">David Tang</a></h1>
+	<h1><a class="logo" href="{{ site.baseurl }}">David Tang</a></h1>
 	<div id="menu">
 		<h2>Photography</h2>
 		<ul>
-			<li><a href="/realestate">Real Estate</a></li>
-			<li><a href="/travel">Travel</a></li>
+			<li><a href="{{ site.baseurl }}/realestate">Real Estate</a></li>
+			<li><a href="{{ site.baseurl }}/travel">Travel</a></li>
 		</ul>
 		<h2>Graphic Design</h2>
 		<ul>
-			<li><a href="/print">Print</a></li>
-			<li><a href="/web">Web</a></li>
+			<li><a href="{{ site.baseurl }}/print">Print</a></li>
+			<li><a href="{{ site.baseurl }}/web">Web</a></li>
 		</ul>
 		<h2>Contact</h2>
 		<ul>
