--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <!-- Navigation -->
 <div id="header" class="sidebar">
-	<h1><a class="logo" href="{{ site.baseurl }}">David Tang</a></h1>
+	<h1><a class="logo" href="{{ site.url }}">David Tang</a></h1>
 	<div id="menu">
 		<h2>Photography</h2>
 		<ul>
